Added sticky menu

--- a/sass/site/primary/_masthead.scss
+++ b/sass/site/primary/_masthead.scss
@@ -8,6 +8,12 @@
 		height: 60px;
 		@include clearfix;
 		position: relative;
+		background: #ffffff;
+		z-index: 9999;
+	}
+
+	.top-bar-sentinel {
+		box-sizing: border-box;
 	}
 
 	.site-branding {
