--- a/sass/site/primary/_comments.scss
+++ b/sass/site/primary/_comments.scss
@@ -80,6 +80,10 @@
 	text-transform: uppercase;
 }
 
+.comments-title {
+	margin-bottom: 0;
+}
+
 .comment-reply-title {
 	font-size: 1em;
 	text-transform: uppercase;
