--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -232,7 +232,7 @@
 }
 
 .more-link {
-	font-size: 1em;
+	font-size: 0.8em;
 	display: block;
 	text-align: center;
 	color: $color__text-dark;
@@ -257,7 +257,7 @@
 	border-bottom: 2px solid $color__borders;
 }
 
-body.search-results .content-area {
+.search-results .content-area {
 	article {
 		@include clearfix;
 
@@ -291,6 +291,44 @@ body.search-results .content-area {
 			.entry-content {
 				width: 56%;
 			}
+		}
+	}
+}
+
+@media screen and (max-width: 320px) {
+	.search-results .content-area {
+		article {
+
+			.entry-thumbnail {
+				width: 100%;
+				margin: 0;
+				margin-left: auto;
+				margin-right: auto;
+				margin-bottom: 25px;
+			}
+
+			.entry-content {
+				float: none;
+
+				.entry-meta {
+					text-align: center;
+				}
+
+				.entry-title {
+					text-align: center;
+				}
+
+				.entry-summary {
+					text-align: center;
+				}
+			}
+
+			&.has-post-thumbnail {
+				.entry-content {
+					width: 100%;
+				}
+			}
+
 		}
 	}
 }
