Added page header and footer margin settings

--- a/layout/page-settings.css
+++ b/layout/page-settings.css
@@ -5,3 +5,9 @@
 .page-layout-full-width .site-content .container,
 .page-layout-full-width-sidebar .site-content .container {
   max-width: 100%; }
+
+.page-layout-no-masthead-margin #masthead {
+  margin-bottom: 0; }
+
+.page-layout-no-footer-margin #colophon {
+  margin-top: 0; }
