--- a/sass/woocommerce/_checkout.scss
+++ b/sass/woocommerce/_checkout.scss
@@ -51,6 +51,11 @@
 			float: left;
 			margin-top: 2em;
 
+			@media screen and (max-width: 768px) {
+				width: 100%;
+				float: none;
+			}
+
 			h3 {
 				font-size: 1.5em;
 
@@ -85,6 +90,11 @@
 			border: 1px solid $color__borders;
 			padding: 0 1em;
 			margin-top: 2em;
+
+			@media screen and (max-width: 768px) {
+				width: 100%;
+				float: none;
+			}
 
 			h3 {
 				font-size: 1.5em;
