Styled and added buttons to the cart quantity field

--- a/sass/woocommerce.scss
+++ b/sass/woocommerce.scss
@@ -6,3 +6,8 @@
 # WooCommerce Cart
 --------------------------------------------------------------*/
 @import "woocommerce/cart";
+
+/*--------------------------------------------------------------
+# WooCommerce Elements
+--------------------------------------------------------------*/
+@import "woocommerce/elements";
